--- a/rro_overlay/FrameworksSunny/res/values/config.xml
+++ b/rro_overlay/FrameworksSunny/res/values/config.xml
@@ -32,6 +32,9 @@
     <!-- Auto-brightness sensor type string -->
     <string name="config_displayLightSensorType">"android.sensor.light"</string>
 
+    <!-- Doze: does this device support STATE_DOZE?  -->
+    <bool name="doze_display_state_supported">true</bool>
+
     <!-- If true, the display will be shifted around in ambient mode. -->
     <bool name="config_enableBurnInProtection">true</bool>
 
