--- a/rro_overlay/FrameworksSunny/res/values/config.xml
+++ b/rro_overlay/FrameworksSunny/res/values/config.xml
@@ -642,4 +642,7 @@
     <!-- Absolute path of the DC dimming node -->
     <string name="config_dcdNodePath">/sys/devices/platform/soc/c440000.qcom,spmi/spmi-0/spmi0-05/c440000.qcom,spmi:qcom,pm6150l@5:qcom,lcdb@ec00/regulator/regulator.63/soc:qcom,dsi-display-lab/anti_flicker</string>
 
+    <!-- media controls -->
+    <bool name="config_mediaControlsTurbulenceByDefault">false</bool>
+
 </resources>
